Bug 918140 - mis-interprets disk "hard quota" (blocks vs bytes confusion). r=benjamin